# cosmic-runkat

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  FLATHUB_SUBMIT.md  FLATPAK.md  MIGRATION.md  README.md  THIRD_PARTY_LICENSES.md  install.sh  io.github.cosmic-runkat.yml  io.github.reality2_roycdavies.cosmic-runkat.yml  justfile
.github/workflows/: ci.yml
docs/: AI_DEVELOPMENT_CASE_STUDY.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  THEMATIC_ANALYSIS.md
docs/transcripts/: README.md  session-01.md  session-02.md  session-05.md
flathub/: FLATHUB_SUBMISSION.md  PR_DESCRIPTION.md  PR_READY.md  SUBMIT_NOW.md  cargo-sources.json  io.github.reality2_roycdavies.cosmic-runkat.yml
resources/: applet-settings.json  io.github.cosmic-runkat.desktop  io.github.cosmic-runkat.metainfo.xml  io.github.reality2-roycdavies.cosmic-runkat.desktop  io.github.reality2-roycdavies.cosmic-runkat.metainfo.xml  io.github.reality2_roycdavies.cosmic-runkat.desktop  io.github.reality2_roycdavies.cosmic-runkat.metainfo.xml
src/: applet.rs  config.rs  constants.rs  cpu.rs  daemon.rs  dbus_client.rs  error.rs  lib.rs  main.rs  paths.rs  popup.rs  settings.rs  settings_cli.rs  settings_page.rs  sysinfo.rs  theme.rs  tray.rs
