[package]
name = "cosmic-runkat"
version = "1.0.0-alpha.1"
edition = "2021"
authors = ["Roy C. Davies"]
license = "MIT"
description = "A cute running cat CPU indicator for COSMIC desktop"
repository = "https://github.com/reality2-roycdavies/cosmic-runkat"

[dependencies]
# COSMIC GUI toolkit (for settings app)
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "a11y",
    "tokio",
    "winit",
    "wgpu",
] }

# Async runtime (optimized features for Phase 3)
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }

# System statistics (CPU monitoring)
systemstat = "0.2"

# JSON config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File paths
dirs = "6"

# System tray (StatusNotifierItem protocol)
ksni = { version = "0.3", features = ["blocking"] }
image = "0.24"

# File system watching for theme changes
notify = "6"

# Error handling
thiserror = "2.0"

# NOTE: Structured logging (tracing) will be added in Phase 3
# when we actually use it for event-driven architecture
# Removed temporarily to allow Flatpak build with vendored dependencies
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# NOTE: RON parsing (ron) will be added in Phase 3
# when we integrate libcosmic theme APIs
# Removed temporarily to allow Flatpak build with vendored dependencies

[profile.release]
lto = true
codegen-units = 1
