[package]
name = "cosmic-runkat"
version = "1.1.0"
edition = "2021"
authors = ["Roy C. Davies"]
license = "MIT"
description = "A cute running cat CPU indicator for COSMIC desktop"
repository = "https://github.com/reality2-roycdavies/cosmic-runkat"

[dependencies]
# COSMIC GUI toolkit (for settings app and layer-shell popup)
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "a11y",
    "tokio",
    "winit",
    "wgpu",
    "wayland",
] }

# Async runtime (optimized features for Phase 3)
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }

# System statistics (CPU monitoring)
systemstat = "0.2"

# JSON config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File paths
dirs = "6"

# CPU count detection
num_cpus = "1.16"

# System tray (StatusNotifierItem protocol)
# Using native async API (removed "blocking" feature for Phase 3)
ksni = { version = "0.3" }
image = "0.24"

# File system watching for theme changes
notify = "6"

# Error handling
thiserror = "2.0"

# Structured logging (Phase 3)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
