[package]
name = "cosmic-runkat"
version = "2.0.0"
edition = "2021"
authors = ["Roy C. Davies"]
license = "MIT"
description = "A cute running cat CPU indicator for COSMIC desktop"
repository = "https://github.com/reality2-roycdavies/cosmic-runkat"

[dependencies]
# COSMIC GUI toolkit (native panel applet)
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "applet",
] }

# Async runtime
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }

# System statistics (CPU monitoring)
systemstat = "0.2"

# JSON config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File paths
dirs = "6"

# CPU count detection
num_cpus = "1.16"

# Image processing (sprite loading and theme recoloring)
image = "0.24"

# Error handling
thiserror = "2.0"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
